--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-loguru==0.6.0
-lxml==4.8.0
-httpx==0.22.0
-pywchat==1.3.0
-Faker==13.3.1
-pyquery==1.4.3
+httpx~=0.22.0
+Faker==13.3.2
+pywchat~=1.3.0
+jmespath~=1.0.0
+pymongo~=4.0.2
+lxml~=4.8.0
+loguru~=0.6.0
+requests~=2.27.1
